# OpenSMOpp

./: .gitignore  CMakeLists.txt
Source/: CMakeLists.txt  Main.cpp  Main.hpp
Source/Libs/: CMakeLists.txt
Source/Libs/SQLiteCpp/: README.md
